@@ -107,16 +107,12 @@ show_site_box = no
 # if you want to disable full audit, then uncomment next option
 #disable_fullaudit = yes
 
-# This is a temporary workaround for these Samba 4 bugs:
-#
-#   https://bugzilla.samba.org/show_bug.cgi?id=9866
-#   https://bugzilla.samba.org/show_bug.cgi?id=9867
-#
-# Uncomment this if you have guest shares enabled and want to join
-# Windows Vista computers to the domain. Please note that completely
-# anonymous share access will not work if you don't provide any valid
-# domain credentials, but at least you will be able to join.
-#join_vista_with_guest_shares = yes
+# Disable uid/gid sync daemon
+# Allowed values = [yes|no]
+# Default value = no
+# if you are not using RSAT or ADC modes, you can uncomment this in
+# order to save some resources
+#disable_uid_sync = yes
 
 # Uncomment this if you want to skip setting the home directory of the
 # users while saving changes
