@@ -1,4 +1,6 @@
 HEAD
+	+ Added disable_uid_sync conf key to save resources when RSAT
+	  or ADC mode is not used
 	+ Migrate mailboxes when upgrading from Zentyal 3.2
 4.0.4
 	+ SysvolSync daemon now synchronize deleted GPOs.
